<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/path_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_port_path"
        app:layout_constraintBottom_toBottomOf="@+id/path_tv"
        app:layout_constraintTop_toTopOf="@+id/path_tv" />

    <TextView
        android:id="@+id/path_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showSerialPortPathDialog"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/please_select"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/path_tv" />

    <TextView
        android:id="@+id/baud_rate_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baud_rate"
        app:layout_constraintBottom_toBottomOf="@+id/baud_rate_tv"
        app:layout_constraintTop_toTopOf="@+id/baud_rate_tv" />

    <TextView
        android:id="@+id/baud_rate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showBaudRateDialog"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/please_select"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/baud_rate_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_data"
        app:layout_constraintBottom_toBottomOf="@+id/test_data_et"
        app:layout_constraintRight_toLeftOf="@+id/test_data_et"
        app:layout_constraintTop_toTopOf="@+id/test_data_et" />

    <EditText
        android:id="@+id/test_data_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/test_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_connect"
        android:onClick="open"
        app:layout_constraintTop_toBottomOf="@+id/test_data_et" />

    <Button
        android:id="@+id/write_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_data"
        android:onClick="write"
        app:layout_constraintLeft_toRightOf="@+id/test_connect"
        app:layout_constraintTop_toBottomOf="@+id/test_data_et" />

</android.support.constraint.ConstraintLayout>